--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     <h1>Will you be my Valentine, <strong>Keesha</strong>? 💘</h1>
 
     <!-- Cute character -->
-    <img src="https://i.imgur.com/6XK6YxM.png" alt="cute cat" />
+    <img src="https://raw.githubusercontent.com/koehlma/cute-valentine-assets/main/cat.png" alt="cute cat" />
+
 
     <div class="buttons">
       <button id="yesBtn">Yes 💕</button>
