--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   <div class="container">
     <h1>Will you be my Valentine, <strong>Keesha</strong>? 💘</h1>
 
+<img src="https://raw.githubusercontent.com/koehlma/cute-valentine-assets/main/cat.png" alt="cute cat" />
 
 
     <div class="buttons">
